--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@ potential - thus supplying quality workforce worthy of global recognition.</p>
         <div class="event">
                     <center>
                         <br>
-                        <h1 class="bolder">Events</h1>
+                        <h1 class="bolder">19th National Mid-Year Convention</h1>
                         <h1 class="bolder" style="margin-top:-40px;">________________</h1>
-                        <p class="bolder info-text" style="text-align:center;">Register for an event today!</p>
+                        <p class="bolder info-text" style="text-align:center;">Register for NMYC Today!</p>
                     </center>
                     <br>
                     <br>
@@ -229,7 +229,7 @@ potential - thus supplying quality workforce worthy of global recognition.</p>
                 <div class="col-sm-4">
                     <center>
                         <br>
-                        <h1 class="bolder">Get In Touch</h1>
+                        <h1 class="bolder">Comment? Suggestion?</h1>
                         <h1 class="bolder" style="margin-top:-40px;">________________</h1>
                         <p class="bolder info-text">Send us your thoughts and we will get back to you as soon as possible.</p>
                     </center>
@@ -237,19 +237,19 @@ potential - thus supplying quality workforce worthy of global recognition.</p>
                     <br>
                     <center>
                     <div class="col-sm-6">
-                        <h4 class="bolder">Manila</h4>
+                        <h4 class="bolder">NFJPIA</h4>
                         <div class="submessages">
-                            <h5 class="bolder">Metro Manila</h5>
-                            <h5 class="bolder">Philippines</h5>
-                            <h5 class="bolder">(032) 123 - 4567</h5>
+                            <h5 class="bolder">700 Shaw Blvd, Mandaluyong,</h5>
+                            <h5 class="bolder">1555 Metro Manila</h5>
+                            <h5 class="bolder">+639424219701</h5>
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <h4 class="bolder">Cebu</h4>
+                        <h4 class="bolder">Email us</h4>
                         <div class="submessages">
-                            <h5 class="bolder">San Fernando, Cebu</h5>
-                            <h5 class="bolder">Philippines</h5>
-                            <h5 class="bolder">(032) 123 - 4567</h5>
+                            <h5 class="bolder">secgen.nfjpia1617@gmail.comu</h5>
+                            <h5 class="bolder"></h5>
+                            <h5 class="bolder"></h5>
                         </div>
                     </div>
                     </center>
