--- a/index.html
+++ b/index.html
@@ -195,17 +195,11 @@ potential - thus supplying quality workforce worthy of global recognition.</p>
             <br><br>
                  <center>
                         <br>
-                        <h1 class="bolder">19th National Mid-Year Convention</h1>
-                        <h1 class="bolder" style="margin-top:-40px;">________________</h1>
-                        <p class="bolder info-text" style="text-align:center;">Register for NMYC Today!</p>
-                    </center>
-                    <br>
-                    <br>
-                    <center>
-                    <button id="regButton" class="regButton" onclick="redirect()">Register</button>
-                    <br>
-                    <br>
-                    <br>
+                        <h1 class="bolder">Isang Tinig Isang Pintig!</h1>
+                      </br>
+                      </br>
+                      </br>
+                      
             </center>
         </div>
 
