--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ potential - thus supplying quality workforce worthy of global recognition.</p>
             <br><br>
                  <center>
                         <br>
-                        <h1 class="bolder">Isang Tinig Isang Pintig!</h1>
+                        <h1>Isang Tinig Isang Pintig!</h1>
                       </br>
                       </br>
                       </br>
