--- a/registration.html
+++ b/registration.html
@@ -75,12 +75,32 @@
                                 <br>
                                 <br>
                                 <div class="registrationForm">
-                                <form action="http://formspree.io/nmyc.nfjpia1617@gmail.com" method="post">
+                                <form action="http://formspree.io/jgadiane@gmail.com" method="post">
                             <div class="form-group">
                                   <input type="text" id="nameSolo" name="nameSolo" class="form-control inputReg" placeholder="Name">
-                                  <input type="text" id="regionSolo" name="regionSolo" class="form-control inputReg " placeholder="Region">
+                                  <select id="regionSolo" name="regionSolo" class="form-control inputReg " placeholder="Region">
+                                    <option value="Region 1 & Car">Region 1 & CAR</option>
+                                    <option value="Region 2">Region 2</option>
+                                    <option value="Region 3">Region 3</option>
+                                    <option value="Region 4">Region 4</option>
+                                    <option value="Region 5">Region 5</option>
+                                    <option value="Region 6">Region 6</option>
+                                    <option value="Region 7">Region 7</option>
+                                    <option value="Region 8">Region 8</option>
+                                    <option value="Region 9">Region 9</option>
+                                    <option value="Region 10 & CARAGA">Region 10 & CARAGA</option>
+                                    <option value="Region 11">Region 11</option>
+                                    <option value="Region 12">Region 12</option>
+                                  </select>
                                   <input type="text" id="chapterSolo" name="chapterSolo" class="form-control inputReg" placeholder="Local Chapter">
-                                  <input type="text" id="shirtSolo" name="shirtSolo" class="form-control inputReg" placeholder="Shirt Size">
+                                  <select id="shirtSolo" name="shirtSolo" class="form-control inputReg" placeholder="Shirt Size">
+                                    <option value="Extra Small">XS</option>
+                                    <option value="Small">S</option>
+                                    <option value="Medium">M</option>
+                                    <option value="Large">L</option>
+                                    <option value="Extra Large">XL</option>
+                                    <option value="2X Large">XXL</option>
+                                  </select>
                                   <div class="col-sm-6" style="padding:0;">
                                       <input type="text" id="courseSolo" name="courseSolo" class="form-control inputReg" placeholder="Course">
                                   </div>
