--- a/registration.html
+++ b/registration.html
@@ -117,7 +117,7 @@
                                   <input type="radio" name="type" id="academic" value="Academic" /><p class="cloud" style="display:inline-block;">Academic</p>
                                   <input type="radio" name="type" id="nonacademic" value="Non - Academic" /><p class="cloud" style="display:inline-block;">Non - Academic</p>
                                   </div>
-                                  <select id="comboacademic" name="Event" class="Xcombo" style="display:none">
+                                  <select id="comboacademic" name="Event" class="Xcombo">
                                      <option value="Financial Accounting & Reporting Cup">Financial Accounting & Reporting Cup</option>
                                      <option value="Advance Fin. Accounting & Reporting Cup">Advance Fin. Accounting & Reporting Cup</option>
                                      <option value="Regulatory Framework for Business Trans. Cup">Regulatory Framework for Business Trans. Cup</option>
@@ -128,7 +128,7 @@
                                      <option value="Business Case Competition">Business Case Competition</option>
                                      <option value="Specialized Case Study">Specialized Case Study</option>
                                   </select>
-                                  <select id="combononacademic" name="Event" class="Xcombo" style="display:none">
+                                  <select id="combononacademic" name="Event" class="Xcombo">
                                      <option value="Lip Sync Battle">Lip Sync Battle</option>
                                      <option value="JPIA Parody">JPIA Parody</option>
                                      <option value="Fashion House Competition">Fashion House Competition</option>
