--- a/blog.html
+++ b/blog.html
@@ -69,8 +69,8 @@
 							</div>
 							<div class="card__copy">
 								<div class="meta">
-									<img class="meta__avatar" src="img/authors/1.png" alt="author01" />
-									<span class="meta__author bolder midnight-blue">Gerry Sutherland</span>
+									<img class="meta__avatar" src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.0-1/13895577_1125230700855980_2147552984137445911_n.jpg?oh=fa06ee1ba65b11a2e2f056adbe1587bc&oe=5882A04E" height="100" width="100"> alt="author01" />
+									<span class="meta__author bolder midnight-blue">Michael Renz Ramos</span>
 									<span class="meta__date bolder midnight-blue">06/19/2015</span>
 								</div>
 								<p class="bolder midnight-blue">Last May 29, 2016 to June 1, 2016, the National Federation of Junior Philippine Institute of Accountants (NFJPIA) conducted its 1st National Executive Board Meeting at the Z Hostel, Makati City, Metro Manila. It is a moment upon which the National Executive Officers and the Regional Council Presidents and officers from the 13 Regional Councils across the nation, can express their thoughts and sentiments as to the general plan for the Federation Year 2016 - 2017, to ensure a smooth flow of events and undertakings by the organization. By conducting such meeting, the NFJPIA provides a sense of unity among its Regional Councils and it also permits an equal opportunity for each of the regions to exercise their freedom of expression through their Regional Council President, in this sense, we can establish that NFJPIA endeavors in consolidating the diverse culture of JPIAns.</p>
