--- a/blog.html
+++ b/blog.html
@@ -69,7 +69,7 @@
 							</div>
 							<div class="card__copy">
 								<div class="meta">
-									<img class="meta__avatar" src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.0-1/13895577_1125230700855980_2147552984137445911_n.jpg?oh=fa06ee1ba65b11a2e2f056adbe1587bc&oe=5882A04E" height="100" width="100" alt="author01" />
+									<img class="meta__avatar" src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.0-1/13895577_1125230700855980_2147552984137445911_n.jpg?oh=fa06ee1ba65b11a2e2f056adbe1587bc&oe=5882A04E" height="100" width="100">
 									<span class="meta__author bolder midnight-blue">Michael Renz Ramos</span>
 									<span class="meta__date bolder midnight-blue">June 2, 2016</span>
 								</div>
