--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,7 @@
 									<circle class="clip" cx="960" cy="250" r="992"></circle>
 								</clipPath>
 							</defs>
-							<image clip-path="url(#clipPath1)" width="1920" height="500" xlink:href="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.0-9/13906840_1086780878073040_9080843217685275929_n.png?oh=961d84a12ae8905d707c4263ff98ea03&oe=58859344"></image>
+							<image clip-path="url(#clipPath1)" width="1920" height="500" xlink:href="http://i1141.photobucket.com/albums/n581/almar101/COVER%20PHOTO_zpsmogw30zs.png"></image>
 						</svg>
 						<div class="card__content">
 							<i class="card__btn-close fa fa-times"></i>
