--- a/registration.html
+++ b/registration.html
@@ -75,7 +75,7 @@
                                 <br>
                                 <br>
                                 <div class="registrationForm">
-                                <form action="http://formspree.io/jgadiane@gmail.com" method="post">
+                                <form action="http://formspree.io/nmyc.nfjpia1617@gmail.com" method="post">
                             <div class="form-group">
                                   <input type="text" id="nameSolo" name="Name" class="form-control inputReg" placeholder="Name">
                                   <select id="regionSolo" name="Region" class="form-control inputReg " placeholder="Region">
@@ -163,7 +163,7 @@
                         <br>
                             <div class="groupContainer">
 
-                                <form id="groupform" action="http://formspree.io/jgadiane@gmail.com"  method="post">
+                                <form id="groupform" action="http://formspree.io/nmyc.nfjpia1617@gmail.com"  method="post">
                     <div class="form-group">
                       <div class="col-sm-6" style="padding:0;">
                       <label for="regionGroup" class="repInfo"><h3 class="bolder">Representative Information</h3></label>
